adding code to FFT chapter and more algorithms that have already been covered on youtube / twitch.

--- a/literature.bib
+++ b/literature.bib
@@ -8,3 +8,26 @@
   year={1965},
   publisher={JSTOR}
 }
+
+@article{jm1973,
+  title={On the identification of the convex hull of a finite set of points in the plane},
+  author={Jarvis, Ray A},
+  journal={Information processing letters},
+  volume={2},
+  number={1},
+  pages={18--21},
+  year={1973},
+  publisher={Elsevier}
+}
+
+@article{gs1972,
+  title={An efficient algorithm for determining the convex hull of a finite planar set},
+  author={Graham, Ronald L},
+  journal={Information processing letters},
+  volume={1},
+  number={4},
+  pages={132--133},
+  year={1972},
+  publisher={Elsevier}
+}
+
