Adding Convolution Chapter

--- a/literature.bib
+++ b/literature.bib
@@ -279,3 +279,16 @@
   publisher={Springer}
 }
 
+#------------------------------------------------------------------------------#
+# Convolutions
+#------------------------------------------------------------------------------#
+
+@article{canny1986computational,
+  title={A computational approach to edge detection},
+  author={Canny, John},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  number={6},
+  pages={679--698},
+  year={1986},
+  publisher={Ieee}
+}
