Adding wikipedia to bib file

--- a/literature.bib
+++ b/literature.bib
@@ -31,3 +31,8 @@
   publisher={Elsevier}
 }
 
+@online{wikipid,
+    title={PID controller - Wikipedia},
+    url={https://en.wikipedia.org/wiki/PID_controller},
+    urldate={2018-12-30}
+}
