adding documentation links in the plotting chapter

--- a/literature.bib
+++ b/literature.bib
@@ -31,3 +31,8 @@
   publisher={Elsevier}
 }
 
+@misc{gnuplot,
+  title={Gnuplot 5.0: An Interactive Plotting Program, Official Gnuplot Documentation},
+  author={Williams, T and Kelley, C},
+  year={2015}
+}
