adding rough draft of intro to computus chapter

--- a/literature.bib
+++ b/literature.bib
@@ -36,3 +36,36 @@
   author={Williams, T and Kelley, C},
   year={2015}
 }
+
+@book{bede725,
+  title={Bede, the Reckoning of Time},
+  author={Venerabilis, Beda and others},
+  volume={29},
+  year={1999},
+  publisher={Liverpool University Press}
+}
+
+@misc{dictcomputus,
+  title={Dictionary.com definition of computus},
+  url={https://www.merriam-webster.com/dictionary/computus},
+  year={2020}
+}
+
+@article{computus1876,
+  title={TO FIND EASTER Anew York correspondent sends us the following},
+  author={unknown},
+  journal={Nature},
+  year={1876}
+}
+
+@article{bien2004,
+  title={Gauss and beyond: The making of Easter algorithms},
+  author={Bien, Reinhold},
+  journal={Archive for history of exact sciences},
+  volume={58},
+  number={5},
+  pages={439--452},
+  year={2004},
+  publisher={Springer}
+}
+
