adding rough draft of chapter, need to add visuals and code

--- a/literature.bib
+++ b/literature.bib
@@ -1,3 +1,7 @@
+#------------------------------------------------------------------------------#
+# FFT
+#------------------------------------------------------------------------------#
+
 @article{ct1965,
   title={An algorithm for the machine calculation of complex Fourier series},
   author={Cooley, James W and Tukey, John W},
@@ -8,6 +12,10 @@
   year={1965},
   publisher={JSTOR}
 }
+
+#------------------------------------------------------------------------------#
+# Convex Hull
+#------------------------------------------------------------------------------#
 
 @article{jm1973,
   title={On the identification of the convex hull of a finite set of points in the plane},
@@ -31,11 +39,19 @@
   publisher={Elsevier}
 }
 
+#------------------------------------------------------------------------------#
+# Plotting
+#------------------------------------------------------------------------------#
+
 @misc{gnuplot,
   title={Gnuplot 5.0: An Interactive Plotting Program, Official Gnuplot Documentation},
   author={Williams, T and Kelley, C},
   year={2015}
 }
+
+#------------------------------------------------------------------------------#
+# Computus
+#------------------------------------------------------------------------------#
 
 @book{bede725,
   title={Bede, the Reckoning of Time},
@@ -52,7 +68,7 @@
 }
 
 @article{computus1876,
-  title={TO FIND EASTER Anew York correspondent sends us the following},
+  title={To find Easter: a new York correspondent sends us the following},
   author={unknown},
   journal={Nature},
   year={1876}
@@ -69,3 +85,27 @@
   publisher={Springer}
 }
 
+@inproceedings{servois,
+  title={84 Calendrier},
+  author={Servois, M},
+  booktitle={Annales de Math{\'e}matiques pures et appliqu{\'e}es},
+  volume={4},
+  number={1813-1814},
+  pages={84--90}
+}
+
+@article{standish2004,
+  title={The astronomical unit now},
+  author={Standish, EM},
+  journal={Proceedings of the International Astronomical Union},
+  volume={2004},
+  number={IAUC196},
+  pages={163--179},
+  year={2004},
+  publisher={Cambridge University Press}
+}
+
+@misc{lunar_month_wiki,
+  title={Wikipedia: Lunar Month},
+  url={https://en.wikipedia.org/wiki/Lunar_month}
+}
