fixing text and adding source code

--- a/literature.bib
+++ b/literature.bib
@@ -88,7 +88,7 @@
 @inproceedings{servois,
   title={84 Calendrier},
   author={Servois, M},
-  booktitle={Annales de Math{\'e}matiques pures et appliqu{\'e}es},
+  booktitle={Annales de Mathématiques pures et appliquées},
   volume={4},
   number={1813-1814},
   pages={84--90}
