adding computus chapter with gauss's Easter algorithm

--- a/literature.bib
+++ b/literature.bib
@@ -107,5 +107,6 @@
 
 @misc{lunar_month_wiki,
   title={Wikipedia: Lunar Month},
-  url={https://en.wikipedia.org/wiki/Lunar_month}
+  url={https://en.wikipedia.org/wiki/Lunar_month},
+  year={2020}
 }
