adding text for IFS chapter, smallscale modifications left for images

--- a/literature.bib
+++ b/literature.bib
@@ -110,3 +110,110 @@
   url={https://en.wikipedia.org/wiki/Lunar_month},
   year={2020}
 }
+
+#------------------------------------------------------------------------------#
+# IFS
+#------------------------------------------------------------------------------#
+@misc{self-similar,
+  title={Wikipedia: Self-similarity},
+  url={https://en.wikipedia.org/wiki/Self-similarity},
+  year={2019}
+}
+
+@misc{hausdorff,
+  title={Wikipedia: Hausdorff dimension},
+  url={https://en.wikipedia.org/wiki/Hausdorff_dimension},
+  year={2019}
+}
+
+@misc{3b1bfractal,
+  author={Sanderson, G},
+  title={3blue1brown: Fractals are typically not self-similar},
+  url={https://www.youtube.com/watch?v=gB9n2gHsHN4},
+  year={2017}
+}
+
+@book{mandelbrot1983fractal,
+  title={The fractal geometry of nature},
+  author={Mandelbrot, Benoit B},
+  volume={173},
+  year={1983},
+  publisher={WH freeman New York}
+}
+
+@article{mandelbrot1967long,
+  title={How long is the coast of Britain? Statistical self-similarity and fractional dimension},
+  author={Mandelbrot, Benoit},
+  journal={science},
+  volume={156},
+  number={3775},
+  pages={636--638},
+  year={1967},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{jampour2010new,
+  title={A new fast technique for fingerprint identification with fractal and chaos game theory},
+  author={Jampour, Mahdi and Yaghoobi, Mahdi and Ashourzadeh, Maryam and Soleimani, Adel},
+  journal={Fractals},
+  volume={18},
+  number={03},
+  pages={293--300},
+  year={2010},
+  publisher={World Scientific}
+}
+
+@misc{fractal-compression,
+  title={Wikipedia: Fractal Compression},
+  url={https://en.wikipedia.org/wiki/Fractal_compression},
+  year={2019}
+}
+
+@article{saupe1994review,
+  title={A review of the fractal image compression literature},
+  author={Saupe, Dietmar and Hamzaoui, Raouf},
+  journal={ACM SIGGRAPH Computer Graphics},
+  volume={28},
+  number={4},
+  pages={268--276},
+  year={1994},
+  publisher={ACM}
+}
+
+@article{gneiting2012estimators,
+  title={Estimators of fractal dimension: Assessing the roughness of time series and spatial data},
+  author={Gneiting, Tilmann and Ševčíková, Hana and Percival, Donald B},
+  journal={Statistical Science},
+  pages={247--277},
+  year={2012},
+  publisher={JSTOR}
+}
+
+@article{hutchinson1981fractals,
+  title={Fractals and self similarity},
+  author={Hutchinson, John E},
+  journal={Indiana University Mathematics Journal},
+  volume={30},
+  number={5},
+  pages={713--747},
+  year={1981},
+  publisher={JSTOR}
+}
+
+@misc{hutchinson-operator,
+  title={Wikipedia: Hutchinson Operator},
+  url={https://en.wikipedia.org/wiki/Hutchinson_operator},
+  year={2019}
+}
+
+@misc{chaos-game,
+  title={Wikipedia: Chaos Game},
+  url={https://en.wikipedia.org/wiki/Chaos_game},
+  year={2019}
+}
+
+@misc{chaos-game-wolf,
+  title={Wolfram: Chaos Game},
+  url={http://mathworld.wolfram.com/ChaosGame.html},
+  year={2019}
+}
