adding revisions such that chapter is at a rough draft state.

--- a/literature.bib
+++ b/literature.bib
@@ -217,3 +217,47 @@
   url={http://mathworld.wolfram.com/ChaosGame.html},
   year={2019}
 }
+
+#------------------------------------------------------------------------------#
+# Domain Coloring
+#------------------------------------------------------------------------------#
+
+@misc{hsv,
+  title={Wikipedia: HSL and HSV},
+  url={https://en.wikipedia.org/wiki/HSL_and_HSV},
+  year={2020}
+}
+
+@article{schloss2019,
+  title={Massively parallel split-step Fourier techniques for simulating quantum systems on graphics processing units},
+  author={Schloss, James},
+  year={2019}
+}
+
+@book{pethick2008,
+  title={Bose--Einstein condensation in dilute gases},
+  author={Pethick, Christopher J and Smith, Henrik},
+  year={2008},
+  publisher={Cambridge university press}
+}
+
+@book{wegert2012,
+  title={Visual complex functions: an introduction with phase portraits},
+  author={Wegert, Elias},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{poelkedomain,
+  title={Domain Coloring of Complex Functions},
+  author={Poelke, Konstantin and Polthier, Konrad}
+}
+
+@article{lundmark2004,
+  title={Visualizing complex analytic functions using domain coloring},
+  author={Lundmark, Hans},
+  journal={Recuperado el},
+  volume={24},
+  year={2004}
+}
+
