adding rough draft of flood fill chapter

--- a/literature.bib
+++ b/literature.bib
@@ -261,3 +261,21 @@
   year={2004}
 }
 
+#------------------------------------------------------------------------------#
+# Flood Fill
+#------------------------------------------------------------------------------#
+
+@misc{gimp_bucket,
+  title={Bucket Fill in Gimp},
+  url={https://docs.gimp.org/2.10/en/gimp-tool-bucket-fill.html},
+  year={2020}
+}
+
+@book{torbert2016,
+  title={Applied computer science},
+  author={Torbert, Shane},
+  year={2016},
+  pages={158},
+  publisher={Springer}
+}
+
