--- a/contents/convolutions/1d/1d.md
+++ b/contents/convolutions/1d/1d.md
@@ -1,5 +1,5 @@
 # Convolutions in 1D
-As mentioned in the [introductory section for convolutions](../convolutions.md), convolutions are methods that allow mathematicians to "blend" two seemingly unrelated functions; however, this definition is not very rigorous, so it might be better to think of a convolution as a method to apply a filter to a signal or image.
+As mentioned in the [introductory section for convolutions](../convolutions.md), convolutions allow mathematicians to "blend" two seemingly unrelated functions; however, this definition is not very rigorous, so it might be better to think of a convolution as a method to apply a filter to a signal or image.
 This, of course, brings up more questions: what is a filter? What is a signal? How is this all related to images?
 
 For this, we will start with some predefined signal.
@@ -43,6 +43,7 @@ $$(f*g)[n] = \sum_{m = -\infty}^{\infty}f[m]g[n-m] = \sum_{m = -\infty}^{\infty}
 
 Where `f[n]` and `g[n]` are arrays of some form.
 This means that the convolution can calculated by shifting either the filter along the signal or the signal along the filter.
+This can be read as we said before: every step, we shift the filter, multiply, and sum.
 There is, of course, a small caveat here.
 Why are we subtracting $$m$$?
 Certainly, if we wanted to "shift the filter along the signal," we could also do so by *adding* $$m$$ instead, but that is actually an entirely separate operation known as a *correlation*, which will be discussed at a later time.
@@ -55,8 +56,8 @@ With this in mind, we can almost directly transcribe the discrete equation into 
 [import:29-48, lang:"julia"](../code/julia/1d_convolution.jl)
 {% endmethod %}
 
-The easiest way to think about this is to read it as you might read a textbook.
-For each element in the output domain, we are summing a certain subsets of elements from `i-length(filter)` to `i` after multiplying it by the reversed filter (filter[i-j]`).
+The easiest way to reason about this code is to read it as you might read a textbook.
+For each element in the output domain, we are summing a certain subsets of elements from `i-length(filter)` to `i` after multiplying it by the reversed filter (`filter[i-j]`).
 In this way, it is precisely the same as the mathematical notation mentioned before.
 
 In contrast to the animation, where the filter continuously reappears on the left edge of the screen, the code we have written for this part of the chapter requires the user to specify what they expect the output array length to be.
@@ -96,12 +97,11 @@ Your browser does not support the video tag.
 </div>
 
 In this animation, the final convolution is so blurred that it does not seem related to the random input signal at all!
-In fact, this animation seems to average much more when compared to the previous Gaussian and the triangle wave animations.
+In fact, this animation seems to blend much more when compared to the previous Gaussian and the triangle wave animations.
 This is because the Gaussian is wider than the previous to filters.
 In general, the wider the filter, the stronger the blurring effect.
 
-This brings up a rather interesting point.
-What happens if we convolve a Gaussian with another Gaussian?
+So what happens if we convolve a Gaussian with another Gaussian?
 Well, that is shown below:
 
 <div style="text-align:center">
@@ -112,7 +112,7 @@ Your browser does not support the video tag.
 </div>
 
 As one might expect, the output is a blurrier Gaussian, which is essentially just wider.
-As an interesting note here, the green area inside this visualization does not properly line up with the overlap of the two arrays.
+If you were paying particularly close attention to the visualization, you might have noticed that the green area inside this visualization does not properly line up with the overlap of the two arrays.
 Don't worry!
 This is exactly what should happen!
 Remember that the convolution requires a *multiplication* of the signal and filter, which was the same as the overlap when the signal was a square wave; however, in the case of two distinct signals, we should expect the multiplied output to look somewhat distinct.
@@ -169,7 +169,7 @@ Your browser does not support the video tag.
 </video>
 </div>
 
-Similar to the case without boundary conditions, this convolution needs to "ramp up," but not "ramp down."
+Similar to the case without boundary conditions, this convolution needs to "ramp up," but it does not need to "ramp down."
 This is because the convolution output no longer extends past the bounds of the original signal so the bounded convolution is a subset of the full convolution.
 More than that, the convolution does not go all the way to 0 on the right side.
 This means that we are actually ignoring a rather important part of the convolution!
@@ -192,14 +192,14 @@ For an unbounded convolution, the function would be called with a the output arr
 
 {% method %}
 {% sample lang="jl" %}
-[import:62-63, lang:"julia"](../code/julia/1d_convolution.jl)
+[import:60-61, lang:"julia"](../code/julia/1d_convolution.jl)
 {% endmethod %}
 
 On the other hand, the bounded call would set the output array size to simply be the length of the signal
 
 {% method %}
 {% sample lang="jl" %}
-[import:65-66, lang:"julia"](../code/julia/1d_convolution.jl)
+[import:63-64, lang:"julia"](../code/julia/1d_convolution.jl)
 {% endmethod %}
 
 Finally, as we mentioned before, it is possible to center bounded convolutions by changing the location where we calculate the each point along the filter.
@@ -213,9 +213,9 @@ This can be done by modifying the following line:
 Here, `j` counts from `i-length(filter)` to `i`.
 To center the convolution, it would need to count from `i-(length(filter)/2)` to `i+(length(filter)/2)` instead.
 
-I think this is a good place to stop discussions on the simple boundary conditions.
-Now let us talk a bit more in detail about the case where we want to filter to continuously reappear every loop.
-That case is known as the "periodic boundary condition."
+I think this is a good place to stop discussions on simple boundary conditions.
+Now let us talk a bit more in detail about the case where we want the filter to continuously reappear every loop.
+This case is known as the "periodic boundary condition" and was used for the visualizations at the start of this chapter.
 
 ### Periodic boundary conditions
 
@@ -242,108 +242,15 @@ In code, this typically amounts to using some form of modulus operation, as show
 [import:4-27, lang:"julia"](../code/julia/1d_convolution.jl)
 {% endmethod %}
 
+This is essentially the same as before, except for the modulus operations, which allow us to work on a periodic domain.
+
 As a final note before continuing: dealing with boundaries is tricky business and can dramatically change the behavior of the output convolution.
 For this reason, it is important to think about what types of boundaries will work best for what you, the programmer, actually need.
 The selection of boundary conditions will be a common trope for a large portion of computer graphics and physics algorithms where researchers often need to present and simulate data on an array of some sort.
 
-## Multiplication as a convolution
-
-As a final note to end this section, we will touch on a rather interesting side topic about how integer multiplication and convolutions are related.
-As an example, let us consider the following multiplication: $$123 \times 456 = 56088$$.
-
-In this case, we might line up the numbers, like so:
-
-$$
-\begin{matrix}
-&&1&2&3 \\
-&\times &4&5&6 \\
-\hline
-5 & 6 & 0 & 8 & 8
-\end{matrix}
-$$
-
-Here, each column represents another power of 10, such that in the number 123, there is 1 100, 2 10s, and 3 1s.
-So let us use a similar notation to perform the convolution, by reversing the second set of numbers and moving it to the right, performing an element-wise multiplication at each step:
-
-$$
-\begin{matrix}
-&&&\color{red}1&2&3 \\
-\times &6&5&\color{red}4&& \\
-\hline
-\end{matrix}\\
-\color{red}{1}\times\color{red}{4} = 4
-$$
-
-$$
-\begin{matrix}
-&&&\color{red}1&\color{green}2&3 \\
-\times &&6&\color{red}5&\color{green}4& \\
-\hline
-\end{matrix}\\
-\color{red}1\times\color{red}5+\color{green}2\times\color{green}4=13
-$$
-
-$$
-\begin{matrix}
-&&&\color{red}1&\color{green}2&\color{blue}3 \\
-\times &&&\color{red}6&\color{green}5&\color{blue}4 \\
-\hline
-\end{matrix}\\
-\color{red}1\times\color{red}6+\color{green}2\times\color{green}5+\color{blue}3\times\color{blue}4=28
-$$
-
-$$
-\begin{matrix}
-&&1&\color{green}2&\color{blue}3& \\
-\times &&&\color{green}6&\color{blue}5&4 \\
-\hline
-\end{matrix}\\
-\color{green}2\times\color{green}6+\color{blue}3\times\color{blue}5=27
-$$
-
-$$
-\begin{matrix}
-&1&2&\color{blue}3&& \\
-\times &&&\color{blue}6&5&4 \\
-\hline
-\end{matrix}\\
-\color{blue}3\times\color{blue}6=18
-$$
-
-For these operations, any blank space should be considered a $$0$$.
-In the end, we will have a new set of numbers:
-
-$$
-\begin{matrix}
-&&1&2&3 \\
-&\times &4&5&6 \\
-\hline
-4 & 13 & 28 & 27 & 18
-\end{matrix}
-$$
-
-Now all that is left is to perform the *carrying* operation by moving any number in the 10s digit to its left-bound neighbor.
-For example, the numbers $$[4, 18]=[4+1, 8]=[5,8]$$ or 58.
-For these numbers, 
-
-$$
-\begin{matrix}
-&4 & 13 & 28 & 27 & 18\\
-=&4+1 & 3+2 & 8+2 & 7+1 & 8\\
-=&5 & 5 & 10 & 8 & 8\\
-=&5 & 5+1 & 0 & 8 & 8\\
-=&5 & 6 & 0 & 8 & 8
-\end{matrix}
-$$
-
-Which give us $$123\times456=56088$$, the correct answer for integer multiplication.
-I am not suggesting that we teach elementary school students to learn convolutions, but I do feel this is an interesting fact that most people do not know: integer multiplication can be performed with a convolution.
-
-This will be discussed in further detail when we talk about the Schonhage-Strassen algorithm, which uses this fact to perform multiplications for incredibly large integers.
-
 ## Example Code
 
-For the full code, we have used the convolution to generate a few files for the full convolution, along with the periodic and simple boundary conditions discussed in this chapter.
+For the code associated with this chapter, we have used the convolution to generate a few files for the full convolution, along with the periodic and simple boundary conditions discussed in this chapter.
 
 {% method %}
 {% sample lang="jl" %}
