adding draft of Barnsley fern chapter

--- a/literature.bib
+++ b/literature.bib
@@ -218,6 +218,13 @@
   year={2019}
 }
 
+@book{barnsley2014fractals,
+  title={Fractals everywhere},
+  author={Barnsley, Michael F},
+  year={2014},
+  publisher={Academic press}
+}
+
 #------------------------------------------------------------------------------#
 # Domain Coloring
 #------------------------------------------------------------------------------#
