adding image and more skeleton work

--- a/literature.bib
+++ b/literature.bib
@@ -299,3 +299,50 @@
   year={1986},
   publisher={Ieee}
 }
+
+#------------------------------------------------------------------------------#
+# Counting                                                                     #
+#------------------------------------------------------------------------------#
+
+@article{morris1978counting,
+  title={Counting large numbers of events in small registers},
+  author={Morris, R},
+  journal={Communications of the ACM},
+  volume={21},
+  number={10},
+  pages={840--842},
+  year={1978},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{flajolet1985approximate,
+  title={Approximate counting: a detailed analysis},
+  author={Flajolet, P},
+  journal={BIT Numerical Mathematics},
+  volume={25},
+  number={1},
+  pages={113--134},
+  year={1985},
+  publisher={Springer}
+}
+
+@misc{arpit_counting,
+  title={Morris's Algorithm for Approximate Counting},
+  author={Bhayani, A},
+  url={https://arpitbhayani.me/blogs/morris-counter},
+  year={2020}
+}
+
+@misc{greggunderson_counting,
+  title={Approximate Counting with Morris's Algorithm},
+  author={Gundersen, G},
+  url={http://gregorygundersen.com/blog/2019/11/11/morris-algorithm/},
+  year={2019}
+}
+
+@misc{3b1b_finger_count,
+  title={How to count to 1000 on two hands},
+  author={Sanderson, G},
+  url={https://youtu.be/1SMmc9gQmHQ},
+  year={2015}
+}
