Add metropolis citation

--- a/literature.bib
+++ b/literature.bib
@@ -346,3 +346,30 @@
   url={https://youtu.be/1SMmc9gQmHQ},
   year={2015}
 }
+
+#------------------------------------------------------------------------------#
+# Metropolis                                                                   #
+#------------------------------------------------------------------------------#
+
+@article{metropolis1953equation,
+author = {Metropolis,Nicholas  and Rosenbluth,Arianna W.  and Rosenbluth,Marshall N.  and Teller,Augusta H.  and Teller,Edward },
+title = {Equation of State Calculations by Fast Computing Machines},
+journal = {The Journal of Chemical Physics},
+volume = {21},
+number = {6},
+pages = {1087-1092},
+year = {1953},
+doi = {10.1063/1.1699114},
+
+URL = { 
+        https://doi.org/10.1063/1.1699114
+    
+},
+eprint = { 
+        https://doi.org/10.1063/1.1699114
+    
+}
+
+}
+Equation of State Calculations by Fast Computing Machines
+Equation of State Calculations by Fast Computing Machines
