Address most issues in review of PR#929
* Application sections created.
* g() definition moved up to a better place
* More discussion on g.
* Missing citations provided
* Clarity provided (hopefully)

--- a/literature.bib
+++ b/literature.bib
@@ -371,3 +371,44 @@ eprint = {
 }
 
 }
+
+@article{rosenthal2011optimal,
+  title={Optimal proposal distributions and adaptive MCMC},
+  author={Rosenthal, Jeffrey S and others},
+  journal={Handbook of Markov Chain Monte Carlo},
+  volume={4},
+  number={10.1201},
+  year={2011},
+  publisher={Chapman & Hall/CRC Boca Raton, FL}
+}
+
+@article{gareth2001optimal,
+author = {Gareth O. Roberts and Jeffrey S. Rosenthal},
+title = {Optimal scaling for various Metropolis-Hastings algorithms},
+volume = {16},
+journal = {Statistical Science},
+number = {4},
+publisher = {Institute of Mathematical Statistics},
+pages = {351 -- 367},
+year = {2001},
+doi = {10.1214/ss/1015346320},
+URL = {https://doi.org/10.1214/ss/1015346320}
+}
+
+@misc{potential_energy_wiki,
+  title={Wikipedia: Potential Energy},
+  url={https://en.wikipedia.org/wiki/Potential_energy},
+  year={2021}
+}
+
+@misc{ludwig_boltzmann_wiki,
+  title={Wikipedia: Ludwig Boltzmann},
+  url={https://en.wikipedia.org/wiki/Ludwig_Boltzmann},
+  year={2021}
+}
+
+@misc{boltzmann_distribution_wiki,
+  title={Wikipedia: Boltzmann distribution},
+  url={https://en.wikipedia.org/wiki/Boltzmann_distribution},
+  year={2021}
+}
