Update citations in md file

--- a/literature.bib
+++ b/literature.bib
@@ -412,3 +412,31 @@ URL = {https://doi.org/10.1214/ss/1015346320}
   url={https://en.wikipedia.org/wiki/Boltzmann_distribution},
   year={2021}
 }
+
+@article{hastings1970monte,
+    author = {Hastings, W. K.},
+    title = "Monte Carlo sampling methods using Markov chains and their applications",
+    journal = {Biometrika},
+    volume = {57},
+    number = {1},
+    pages = {97-109},
+    year = {1970},
+    month = {04},
+    abstract = "{A generalization of the sampling method introduced by Metropolis et al. (1953) is presented along with an exposition of the relevant theory, techniques of application and methods and difficulties of assessing the error in Monte Carlo estimates. Examples of the methods, including the generation of random orthogonal matrices and potential applications of the methods to numerical problems arising in statistics, are discussed.}",
+    issn = {0006-3444},
+    doi = {10.1093/biomet/57.1.97},
+    url = {https://doi.org/10.1093/biomet/57.1.97},
+    eprint = {https://academic.oup.com/biomet/article-pdf/57/1/97/23940249/57-1-97.pdf},
+}
+
+@misc{mala_wiki,
+  title={Wikipedia: Metropolis-adjusted Langevin Algorithm},
+  url={https://en.wikipedia.org/wiki/Metropolis-adjusted_Langevin_algorithm},
+  year={2021}
+}
+
+@misc{hmc_wiki,
+  title={Wikipedia: Hamiltonian Monte Carlo},
+  url={https://en.wikipedia.org/wiki/Hamiltonian_Monte_Carlo},
+  year={2021}
+}
