Add testing function to metropolis python code.
Also modifies markdown to describe test.
Also adds citation for RMSD.

--- a/literature.bib
+++ b/literature.bib
@@ -440,3 +440,10 @@ URL = {https://doi.org/10.1214/ss/1015346320}
   url={https://en.wikipedia.org/wiki/Hamiltonian_Monte_Carlo},
   year={2021}
 }
+
+@misc{rmsd_wiki,
+  title={Wikipedia: Root Mean Square Deviation},
+  url={https://en.wikipedia.org/wiki/Root-mean-square_deviation},
+  year={2021}
+}
+
