New chapter "Metropolis" with Python Implementation (#929)
* Add new chapter: metropolis_hastings; in python

* Add markdown and python files for metropolis

* Add image for metropolis

* Update .gitignore, SUMMARY.md, and metropolis

* Untrack .ipynb_checkpoints

* Untrack ipynb_checkpoints

* Fix algorithm steps list

* Really fix markdown list

* Add plot of P to chapter

* Add metropolis animation and update plot of P(x)

* Add minor update to chapter text

* Generate gif and mp4 for random walk

* Complete first draft!

* Final version before Pull Request

* Add metropolis citation

* Remove unnecessary lines from code and bib file

* Fix display of code in md

* Fix random walk capitalization.

* Apply Amaras' suggestions from code review

This commit makes minor edits which resolve conflicts with PEP8 and improve readability of code. 

It also makes chapter sub-chapter of Monte Carlo.

Co-authored-by: James Schloss <jrs.schloss@gmail.com>
Co-authored-by: Sammy Plat <amaras@vivaldi.net>

* Fix the code import lines in md file.

* Change  to  in metropolis.py

* Add probability section to metropolis.md

However, this is temporary, as this section needs to go into a separate chapter.

* Move Probability section in metropolis to own chapter.

* Fix SUMMARY.md spelling mistake from previous commit

* Add figures for probability distribution chapter

* Update image of normal distribution

* Finish first draft of probability chapter

* Minor edits to distributions.md.

* "Minor changes to distributions.md"

* Complete the Example/Application section of metropolis.

* Address most issues in review of PR#929

* Application sections created.
* g() definition moved up to a better place
* More discussion on g.
* Missing citations provided
* Clarity provided (hopefully)

* Add image of 1D_particles

* Update citations in md file

* Add testing function to metropolis python code.

Also modif

--- a/literature.bib
+++ b/literature.bib
@@ -346,3 +346,104 @@
   url={https://youtu.be/1SMmc9gQmHQ},
   year={2015}
 }
+
+#------------------------------------------------------------------------------#
+# Metropolis                                                                   #
+#------------------------------------------------------------------------------#
+
+@article{metropolis1953equation,
+author = {Metropolis,Nicholas  and Rosenbluth,Arianna W.  and Rosenbluth,Marshall N.  and Teller,Augusta H.  and Teller,Edward },
+title = {Equation of State Calculations by Fast Computing Machines},
+journal = {The Journal of Chemical Physics},
+volume = {21},
+number = {6},
+pages = {1087-1092},
+year = {1953},
+doi = {10.1063/1.1699114},
+
+URL = { 
+        https://doi.org/10.1063/1.1699114
+    
+},
+eprint = { 
+        https://doi.org/10.1063/1.1699114
+    
+}
+
+}
+
+@article{rosenthal2011optimal,
+  title={Optimal proposal distributions and adaptive MCMC},
+  author={Rosenthal, Jeffrey S and others},
+  journal={Handbook of Markov Chain Monte Carlo},
+  volume={4},
+  number={10.1201},
+  year={2011},
+  publisher={Chapman & Hall/CRC Boca Raton, FL}
+}
+
+@article{gareth2001optimal,
+author = {Gareth O. Roberts and Jeffrey S. Rosenthal},
+title = {Optimal scaling for various Metropolis-Hastings algorithms},
+volume = {16},
+journal = {Statistical Science},
+number = {4},
+publisher = {Institute of Mathematical Statistics},
+pages = {351 -- 367},
+year = {2001},
+doi = {10.1214/ss/1015346320},
+URL = {https://doi.org/10.1214/ss/1015346320}
+}
+
+@misc{potential_energy_wiki,
+  title={Wikipedia: Potential Energy},
+  url={https://en.wikipedia.org/wiki/Potential_energy},
+  year={2021}
+}
+
+@misc{ludwig_boltzmann_wiki,
+  title={Wikipedia: Ludwig Boltzmann},
+  url={https://en.wikipedia.org/wiki/Ludwig_Boltzmann},
+  year={2021}
+}
+
+@misc{boltzmann_distribution_wiki,
+  title={Wikipedia: Boltzmann distribution},
+  url={https://en.wikipedia.org/wiki/Boltzmann_distribution},
+  year={2021}
+}
+
+@article{hastings1970monte,
+    author = {Hastings, W. K.},
+    title = "Monte Carlo sampling methods using Markov chains and their applications",
+    journal = {Biometrika},
+    volume = {57},
+    number = {1},
+    pages = {97-109},
+    year = {1970},
+    month = {04},
+    abstract = "{A generalization of the sampling method introduced by Metropolis et al. (1953) is presented along with an exposition of the relevant theory, techniques of application and methods and difficulties of assessing the error in Monte Carlo estimates. Examples of the methods, including the generation of random orthogonal matrices and potential applications of the methods to numerical problems arising in statistics, are discussed.}",
+    issn = {0006-3444},
+    doi = {10.1093/biomet/57.1.97},
+    url = {https://doi.org/10.1093/biomet/57.1.97},
+    eprint = {https://academic.oup.com/biomet/article-pdf/57/1/97/23940249/57-1-97.pdf},
+}
+
+@misc{mala_wiki,
+  title={Wikipedia: Metropolis-adjusted Langevin Algorithm},
+  url={https://en.wikipedia.org/wiki/Metropolis-adjusted_Langevin_algorithm},
+  year={2021}
+}
+
+@misc{hmc_wiki,
+  title={Wikipedia: Hamiltonian Monte Carlo},
+  url={https://en.wikipedia.org/wiki/Hamiltonian_Monte_Carlo},
+  year={2021}
+}
+
+@misc{rmsd_wiki,
+  title={Wikipedia: Root Mean Square Deviation},
+  url={https://en.wikipedia.org/wiki/Root-mean-square_deviation},
+  year={2021}
+}
+
